# py-fractals

./: .gitignore  pyproject.toml  requirements.txt  test.json
res/backup shaders/: burningship2d.frag  julia4d.frag  mandelbrot3d.frag  mandelbrot4d.frag
res/doc/: positions.txt
res/shaders/: burningship2d.frag  julia2d.frag  julia3d.frag  julia4d.frag  mandelbox.frag  mandelbrot2d.frag  mandelbrot3d.frag  mandelbrot4d.frag  vertex_shader.glsl
res/styles/: main_window.qss
res/ui/: main_window.ui
src/: FractalEngine.py  Fractals.py  InterfaceItems.py  Window.py  main.py  setup.py
src/app/: main.py
src/fractals/: __fractal_2d.py  __fractals.py  __init__.py  burning_ship2d.py  burning_ship_2d.py  julia2d.py  julia_2d.py  julia_3d.py  mandelbox.py  mandelbrot_2d.py  mandelbrot_3d.py
src/fractals/abstract/: AA_fractal.py  __init__.py  animated_fractal.py  bg_colorable_fractal.py  colorable_fractal.py  fractal_2d.py  fractal_3d.py  fractal_abc.py  fragment_only_fractal.py  iterable_fractal.py  screenshotable_fractal.py  stateful_fractal.py
src/frontend/: __init__.py  constants.py  main_window.py
src/frontend/components/: __init__.py  animation_param_widget.py  colored_button.py  named_check_box.py  named_slider.py  named_spin_box.py  vstack_widget.py
src/shaders/: julia2d.frag  julia3d.frag  mandelbox.frag  mandelbrot2d.frag
src/util/: __init__.py  create_video.py  geometry.py  use_setter.py
states/: beautiful.json  bs-cool.json  test-state.json  test-state2.json
states/julia2d/: 1.json  2.json
